[package]
name = "frut_std"
version = "0.0.4"
edition = "2021"
authors = ["BenimFurka"]
description = "Standard library for the Frut language"
license = "Apache-2.0"
repository = "https://github.com/BenimFurka/frut_std"
keywords = ["frut"]

[lib]
name = "frut_std"
path = "src/lib.rs"

[dependencies]
frut_lib = { version = "0.0.4", features = ["std"] }
